test/invalidReturnTypeInference.hql
def foo(){ // error
	n := 0;
	return 0: int[n];
}

def main[n:!ℕ]():int[n]{
	return foo();
}
